# casa_do_panico

./: .gitignore  Cargo.toml  README.md  cdp_api.toml  cdp_broker.toml  cdp_dummy.toml  cdp_rumqttd.toml
cdp_api/: Cargo.toml
cdp_api/src/: api.rs  config.rs  db.rs  main.rs
cdp_api/src/api/: handlers.rs
cdp_api/src/db/: inmem.rs
cdp_broker/: Cargo.toml
cdp_broker/src/: broker.rs  config.rs  main.rs
cdp_dummy/: Cargo.toml
cdp_dummy/src/: config.rs  dummy.rs  main.rs
cdp_web/: index.html  magic.js
libcdp/: Cargo.toml
libcdp/src/: comm.rs  lib.rs
libcdp/src/comm/: broker_api.rs  sensor_broker.rs
