[package]
name = "cdp_dummy"
version = "0.1.0"
authors = ["Bruno Borges Paschoalinoto <bruno@paschoalinoto.com>"]
edition = "2018"

[dependencies]
rumqttc = "0.7.0"
config = "0.11"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dependencies.libcdp]
version = "0.1"
path = "../libcdp/"
